public interface Turboable {

    default void turboOn(){}
    default void turboOff(){}

}
